--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -32,4 +32,4 @@ output:
 
 [Block 3, Session 1: Infrastructure: Terminology and Contextualization](block3_session_1.html)
 
-[Block 3, Session 2: Infrastructure for the Semester Projects]()
+[Block 3, Session 2: Infrastructure for the Semester Projects](block3_session_2.html)
